--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Yashovardhan NS - DLBCSPJWD01 Project</p>
+        <p>&copy; DLBCSPJWD01 Project</p>
     </footer>
 
     <script src="app.js"></script>
 </body>
+
 </html>
